--- a/item/templates/item/item_detail_attachment_delete.html
+++ b/item/templates/item/item_detail_attachment_delete.html
@@ -1,7 +1,7 @@
 <form method="post"
       action="{% url 'item_attachment_delete' attachment.id %}">
   <div class="modal-header">
-    <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+    <h5 class="modal-title">Confirm Delete</h5>
     <button type="button"
             class="btn-close"
             data-bs-dismiss="modal"
@@ -9,8 +9,8 @@
   </div>
   <div class="modal-body">
     {% csrf_token %}
-    <p>Are you sure you want to delete this attachment?</p>
-    File Name: <i class="bg-warning px-2 rounded"> {{ attachment.filename }} </i>    
+    <p>Are you sure you want to delete this document?</p>
+    File Name: <i class="bg-warning px-2 rounded"> {{ attachment.filename }} </i>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
