--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -50,7 +50,7 @@
           </table>
         </div>
       </div>
-      {% include "pagination_simple.html" %}
+      {% include "partials/pagination_simple.html" %}
     </div>
   </div>
   <!-- Delete Modal -->
