--- a/item/templates/item/item_list.html
+++ b/item/templates/item/item_list.html
@@ -60,7 +60,7 @@
             </tbody>
           </table>
         </div>
-        {% include "pagination_simple.html" %}
+        {% include "partials/pagination_simple.html" %}
       </div>
     </div>
   </div>
