--- a/static/css/reagentree-1.0.css
+++ b/static/css/reagentree-1.0.css
@@ -303,3 +303,25 @@ a:hover {
   border-radius: 0.25rem; /* Optional rounded corners */
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); /* Optional shadow for a floating effect */
 }
+
+/* Auto-dismiss alert transition */
+.alert.auto-dismiss {
+  transition: opacity 1s ease-out, max-height 1s ease-out, padding 1s ease-out,
+    margin 1s ease-out;
+  opacity: 1;
+  max-height: 60px; /* Adjust based on your alert's typical height */
+  overflow: hidden;
+  padding: 10px; /* Adjust to your alert's default padding */
+  margin: 10px 0; /* Adjust to your alert's default margin */
+}
+
+.alert.auto-dismiss.hide {
+  opacity: 0; /* Fully transparent */
+  max-height: 0; /* Collapse the alert */
+  padding: 0; /* Remove padding during collapse */
+  margin: 0; /* Remove margin during collapse */
+}
+
+.alert.auto-dismiss .btn-close {
+  display: none; /* Hide the close button */
+}
