--- a/category/templates/category/category_detail.html
+++ b/category/templates/category/category_detail.html
@@ -1,10 +1,74 @@
 {% extends "object_detail_base.html" %}
 {% block title %}
-  Category
+  Category - {{ category.name }}
 {% endblock title %}
 {% block panel_title %}
-  Category Detail
-{% endblock panel_title %}
-{% block panel_content %}
   {{ category.name }}
+{% endblock panel_title %}
+{{ category.name }}
+{% block panel_actions %}
+  <span class="p-1">
+    <a href="{% url 'category_update' category.pk %}?next={{ request.path }}"
+       title="Update category"
+       class="btn btn-sm btn-success">
+      <i class="bi bi-pencil-square"></i> Edit</a>
+  </span>
+{% endblock panel_actions %}
+{% block panel_content %}
+  <div class="row p-3">
+    <div class="col">
+      <table class="table table-sm table-borderless">
+        <tbody>
+          <tr>
+            <th width="15%">Name</th>
+            <td width="25%">{{ category.name }}</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <th>Description</th>
+            <td colspan=2>{{ category.description }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="panel mx-3">
+    <div class="panel-heading">
+      <span class="h5"><i class="bi bi-boxes"></i> All items in this category</span>
+    </div>
+    <div class="panel-content">
+      <table class="table table-sm">
+        <thead>
+          <tr>
+            <th scope="col" width="25%">Name</th>
+            <th scope="col" width="20%">Manufacturer</th>
+            <th scope="col" width="20%">Supplier</th>
+            <th scope="col" width="35%">Description</th>
+          </tr>
+        </thead>
+        {% for item in page_obj %}
+          <tr>
+            <td>
+              <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
+            </td>
+            <td>
+              {% if item.manufacturer %}
+                <a href="{% url 'company_detail' item.manufacturer.pk %}">{{ item.manufacturer }}</a>
+              {% endif %}
+            </td>
+            <td>
+              {% if item.supplier %}
+                <a href="{% url 'company_detail' item.supplier.pk %}">{{ item.supplier }}</a>
+              {% endif %}
+            </td>
+            <td>{{ item.description|truncatechars:50 }}</td>
+          </tr>
+        {% endfor %}
+      </table>
+      {% include "partials/pagination_simple.html" %}
+    </div>
+  </div>
+  {% with obj=category %}
+    {% include "partials/object_last_updated.html" %}
+  {% endwith %}
 {% endblock panel_content %}
