--- a/category/templates/category/category_list.html
+++ b/category/templates/category/category_list.html
@@ -23,11 +23,11 @@
             <tbody>
               {% for category in categories %}
                 <tr>
-                  <td>{{ category.name }}</td>
+                  <td><a href="{% url 'category_detail' category.pk %} " title="category details">{{ category.name }}</a></td>
                   <td>{{ category.description }}</td>
                   <td>{{ category.items.all }}</td>
                   <td class="d-none d-lg-table-cell">
-                    <a href="{% url 'category_update' pk=category.pk %}"><i class="bi bi-pencil-square"></i></a>
+                    <a href="{% url 'category_update' category.pk %}"><i class="bi bi-pencil-square"></i></a>
                     <a hx-get="{% url 'category_delete' category.pk %}"
                        hx-trigger="click"
                        hx-target="#deleteModal .modal-content"
@@ -41,7 +41,7 @@
             </tbody>
           </table>
         </div>
-        {% include "pagination_simple.html" %}
+        {% include "partials/pagination_simple.html" %}
       </div>
     </div>
   </div>
