--- a/category/templates/category/category_update.html
+++ b/category/templates/category/category_update.html
@@ -1,22 +1,11 @@
-{% extends "base.html" %}
+{% extends "object_update_base.html" %}
 {% load crispy_forms_tags %}
 {% block title %}
-  Category
+Category
 {% endblock title %}
-{% block content %}
-  <div class="container">
-    <div class="panel">
-      <div class="panel-heading">
-        <h3 class="panel-title">Category Update</h3>
-      </div>
-      <div class="panel-content">
-        <form method="post">
-          {% csrf_token %}
-          {{ form|crispy }}
-          <button class="btn btn-success" type="submit">Update</button>
-        </form>
-      </div>
-    </div>
-
-  </div>
-{% endblock content %}
+{% block panel_title %}
+Category Update
+{% endblock panel_title %}
+{% block update_form %}
+  {{ form|crispy }}
+{% endblock update_form %}
