--- a/delivery/templates/delivery/delivery_detail.html
+++ b/delivery/templates/delivery/delivery_detail.html
@@ -2,18 +2,17 @@
 {% block title %}
   Delivery
 {% endblock title %}
-{% block panel_heading %}
-  <div class="panel-heading d-flex justify-content-between me-2">
-    <span class="h4">Delivery</span>
-    <span>Received by {{ delivery.received_by.first_name }} at  {{ delivery.delivery_date|date:"h:i" }} on {{ delivery.delivery_date|date:"d/m/Y" }}</span>
-    <span>
-      <a href="{% url 'delivery_update' pk=delivery.pk %}"
-         class="btn btn-success">
-        <i class="bi bi-pencil-square"></i> Edit
-      </a>
-    </span>
-  </div>
-{% endblock panel_heading %}
+{% block panel_title %}
+  Delivery Detail
+{% endblock panel_title %}
+{% block panel_actions %}
+  <span class="p-1">
+    <a href="{% url 'delivery_update' delivery.pk %}?next={{ request.path }}"
+       title="Update delivery"
+       class="btn btn-sm btn-success">
+      <i class="bi bi-pencil-square"></i> Edit</a>
+  </span>
+{% endblock panel_actions %}
 {% block panel_content %}
   {% for stock in delivery.stockitems.all %}<p>{{ stock }}</p>{% endfor %}
 {% endblock panel_content %}
