--- a/delivery/templates/delivery/delivery_list.html
+++ b/delivery/templates/delivery/delivery_list.html
@@ -59,7 +59,7 @@
             </tbody>
           </table>
         </div>
-        {% include "pagination_simple.html" %}
+        {% include "partials/pagination_simple.html" %}
       </div>
     </div>
   </div>
