--- a/item/templates/item/stockitem_list.html
+++ b/item/templates/item/stockitem_list.html
@@ -33,7 +33,7 @@
                   </td>
                   <td>
                     <a href="{% url 'stock_detail' stock.pk %}"
-                       title="#{{ stock.ordinal_number }} Received at {{ stock.delivery.delivery_date|date:'d/m/y h:i' }}">
+                       title="#{{ stock.ordinal_number }} Received at {{ stock.delivery.delivery_date|date:'d/m/y H:i' }}">
                       <span class="badge rounded-pill bg-info"><b>{{ stock.ordinal_number }}</b></span>
                     </a>
                   </td>
@@ -63,7 +63,7 @@
             </tbody>
           </table>
         </div>
-        {% include "pagination_simple.html" %}
+        {% include "partials/pagination_simple.html" %}
       </div>
     </div>
   </div>
