location detail view

--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -149,6 +149,7 @@
             </thead>
             <tbody>
               {% for stock in stockitems %}
+                {# TODO: paginate page_obj #}
                 <tr>
                   <td>
                     <a href="{% url 'delivery_detail' stock.delivery.pk %}"
