company detail view

--- a/category/templates/category/category_detail.html
+++ b/category/templates/category/category_detail.html
@@ -20,13 +20,12 @@
       <table class="table table-sm table-borderless">
         <tbody>
           <tr>
-            <th width="15%">Name</th>
-            <td width="25%">{{ category.name }}</td>
-            <td>&nbsp;</td>
+            <td width="15%" class="text-muted">Name:</td>
+            <td width="85%">{{ category.name }}</td>            
           </tr>
           <tr>
-            <th>Description</th>
-            <td colspan=2>{{ category.description }}</td>
+            <td class="text-muted">Description:</td>
+            <td>{{ category.description }}</td>
           </tr>
         </tbody>
       </table>
