--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -16,8 +16,9 @@
               <tr>
                 <th scope="col">Company</th>
                 <th scope="col" class="d-none d-lg-table-cell">Description</th>
-                <th scope="col" class="text-center d-lg-table-cell">Made</th>
-                <th scope="col" class="text-center d-lg-table-cell">Supplied</th>
+                <th scope="col" class="text-center d-none d-lg-table-cell">Made</th>
+                <th scope="col" class="text-center d-none d-lg-table-cell">Supplied</th>
+                <th scope="col" class="text-center d-lg-table-cell">Phone</th>
                 <th scope="col">Website</th>
                 <th scope="col" class="d-none d-lg-table-cell">Actions</th>
               </tr>
@@ -28,9 +29,10 @@
                   <td>
                     <a href="{% url 'company_detail' company.pk %}">{{ company.name }}</a>
                   </td>
-                  <td class="d-none d-lg-table-cell">{{ company.description }}</td>
-                  <td class="text-center d-lg-table-cell">{{ company.manufactured_items.count }}</td>
-                  <td class="text-center d-lg-table-cell">{{ company.supplied_items.count }}</td>
+                  <td class="d-none d-lg-table-cell">{{ company.description|truncatechars:50 }}</td>
+                  <td class="text-center d-none d-lg-table-cell">{{ company.manufactured_items.count }}</td>
+                  <td class="text-center d-none d-lg-table-cell">{{ company.supplied_items.count }}</td>
+                  <td class="text-center d-lg-table-cell">{{ company.phone }}</td>
                   <td>
                     <a href="{{ company.website }}" title="Visit {{ company.website }}">{{ company.website }}</a>
                   </td>
