--- a/location/templates/location/location_detail.html
+++ b/location/templates/location/location_detail.html
@@ -19,13 +19,12 @@
       <table class="table table-sm table-borderless">
         <tbody>
           <tr>
-            <th width="15%">Name</th>
-            <td width="25%">{{ location.name }}</td>
-            <td>&nbsp;</td>
+            <td width="15%" class="text-muted">Name:</td>
+            <td width="85%">{{ location.name }}</td>
           </tr>
           <tr>
-            <th>Description</th>
-            <td colspan=2>{{ location.description }}</td>
+            <td class="text-muted">Description:</td>
+            <td>{{ location.description }}</td>
           </tr>
         </tbody>
       </table>
