--- a/location/templates/location/location_detail.html
+++ b/location/templates/location/location_detail.html
@@ -59,7 +59,7 @@
             <td>
               <a href="{% url 'stock_detail' stock.pk %}" title="stock details"><span class="badge rounded-pill bg-info"><b>{{ stock.ordinal_number }}</b></span></a>
             </td>
-            <td>{{ stock.expiry_date }}</td>
+            <td>{{ stock.expiry_date|date:'d/m/Y' }}</td>
             <td>level</td>
           </tr>
         {% endfor %}
