front page panels and coloring

--- a/category/templates/category/category_detail.html
+++ b/category/templates/category/category_detail.html
@@ -33,7 +33,7 @@
   </div>
   <div class="panel mx-3">
     <div class="panel-heading">
-      <span class="h5"><i class="bi bi-boxes"></i> All items in this category</span>
+      <span class="h5"><i class="bi bi-box2-fill" style="color: var(--bs-blue);"></i> All items in this category</span>
     </div>
     <div class="panel-content">
       <table class="table table-sm">
