--- a/location/templates/location/location_detail.html
+++ b/location/templates/location/location_detail.html
@@ -32,14 +32,14 @@
   </div>
   <div class="panel mx-3">
     <div class="panel-heading">
-      <span class="h5"><i class="bi bi-boxes"></i> All stocks in this location</span>
+      <span class="h5"><i class="bi bi-box-seam-fill"  style="color: var(--bs-orange);"></i> All stocks in this location</span>
     </div>
     <div class="panel-content">
       <table class="table table-sm">
         <thead>
           <tr>
             <th>Received</th>
-            <th>Item</th>
+            <th>Sotck Item</th>
             <th>Lot Number</th>
             <th>Box ID</th>
             <th>Expiry Date</th>
