--- a/company/templates/company/company_detail.html
+++ b/company/templates/company/company_detail.html
@@ -46,12 +46,12 @@
   {% if company.manufactured_items.count > 0 %}
     <div class="panel mx-3 my-4">
       <div class="panel-heading">
-        <span class="h5"><i class="bi bi-boxes"></i> Items Manufactured</span>
+        <span class="h5"> Items Manufactured</span>
       </div>
       <div class="panel-content py-4">
         {% for item in company.manufactured_items.all %}
           <span class="ps-2 pe-4">
-            <i class="bi bi-box-seam"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
+            <i class="bi bi-box2-fill" style="color: var(--bs-yellow);"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
           </span>
         {% endfor %}
       </div>
@@ -61,12 +61,12 @@
   {% if company.supplied_items.count > 0 %}
     <div class="panel mx-3 my-4">
       <div class="panel-heading">
-        <span class="h5"><i class="bi bi-boxes"></i> Items Supplied</span>
+        <span class="h5"> Items Supplied</span>
       </div>
       <div class="panel-content py-4">
         {% for item in company.supplied_items.all %}
           <span class="ps-2 pe-4">
-            <i class="bi bi-box-seam"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
+            <i class="bi bi-box2-fill" style="color: var(--bs-blue);"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
           </span>
         {% endfor %}
       </div>
