--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -65,7 +65,7 @@
     <div class="col">
       <div class="panel">
         <div class="panel-heading d-flex justify-content-between">
-          <span class="h5"><i class="bi bi-files"></i> Documents</span>
+          <span class="h5"><i class="bi bi-folder-fill" style="color: var(--bs-green);"></i> Documents</span>
           <a hx-get="{% url 'item_attachment_upload' item.pk %}"
              hx-trigger="click"
              hx-target="#crudModal .modal-content"
@@ -96,9 +96,9 @@
                     <td>{{ file.name }}</td>
                     <td>
                       {% if file.filetype %}
-                        <i class="bi bi-filetype-{{ file.filetype }}"></i>
+                        <i class="bi bi-filetype-{{ file.filetype }}" style="color: var(--bs-green);"></i>
                       {% else %}
-                        <i class="bi bi-file-earmark"></i>
+                        <i class="bi bi-file-earmark" style="color: var(--bs-green);"></i>
                       {% endif %}
                       <a href="{{ file.file.url }}" title="Open/download {{ file.filename }}">{{ file.filename }}</a>
                     </td>
@@ -135,7 +135,7 @@
     <div class="col">
       <div class="panel">
         <div class="panel-heading d-flex justify-content-between">
-          <span class="h5"><i class="bi bi-boxes"></i> Available Stocks</span>
+          <span class="h5"><i class="bi bi-box-seam-fill" style="color: var(--bs-orange);"></i> Available Stocks</span>
         </div>
         <div class="panel-content">
           <table class="table table-sm table-hover">
