--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
         </nav>
       {% endblock header %}
     </header>
-    <main id="main-content">
+    <main id="main-content" class="mt-3 mx-2">
       <!-- Alerts goes here -->
       {% block alerts %}
         <div class="container-fluid">
